# pretty-decimal

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  msrv.yml
benches/: bench.rs
dev/bench/: data.js
src/: lib.rs
