[package]
name = "pretty_decimal"
version = "0.2.1"
edition = "2018"
rust-version = "1.79.0"
license = "Apache-2.0"
description = "library for Decimal type with pretty printing."

[dependencies]
arrayvec = "0.7.6"
bounded-static = { version = "0.8", default-features = false, features = ["derive"], optional = true}
itoa = "1.0.17"
rust_decimal = "1.40.0"
thiserror = "2.0.17"

[features]
bounded-static = ["dep:bounded-static"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.8.1"
pretty_assertions = "1.4.1"
rust_decimal_macros = "1.40.0"
